--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,10 @@
     <head> 
         <title>Practicing Git</title>
         <style>
+            h1 {
+                color: red;
+                font-size: 60px;
+            }
             h1, h3, .message {
                 font-family: Arial, Helvetica, sans-serif;
                 font-size: 50px;
