--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Practicing Git</title>
         <style>
             h1 {
-                color: red;
+                color: blue;
                 font-size: 60px;
             }
             h1, h3, .message {
