--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="eng">
-    <head>
+    <head> 
         <title>Practicing Git</title>
+        <style>
+            h1, h3, .message {
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 50px;
+                padding: 5px;
+                margin: 10px;
+                align-content: center;
+                text-align: center;
+                align-items: center;
+            }
+            .message {
+                position: relative;
+                left: 300px;
+            }
+        </style>
     </head>
     <body>
         <h1>Hello there!</h1>
         <h3>What is your name?</h3>
-        <input type="text">
+        <input class="message" type="text">
+        <h3>How old are you Mr.?</h3>
+        <input class="message" type="number">
     </body>
 </html>
