Add border radius

--- a/hello.html
+++ b/hello.html
@@ -19,6 +19,7 @@
             .message {
                 position: relative;
                 left: 300px;
+                border-radius: 15px;
             }
         </style>
     </head>
