Add new question

--- a/hello.html
+++ b/hello.html
@@ -28,5 +28,7 @@
         <input class="message" type="text">
         <h3>How old are you Mr.?</h3>
         <input class="message" type="number">
+        <h3>Your favourite sport?</h3>
+        <input class="message" type="text">
     </body>
 </html>
